amazon-sns/4.7/modules/ROOT/pages/amazon-sns-connector-reference.adoc
= Amazon SNS 4.7 Connector Reference
:page-aliases: connectors::amazon/amazon-sns-connector-reference.adoc



Release Notes: xref:release-notes::connector/amazon-sns-connector-release-notes-mule-4.adoc[Amazon SNS Connector Release Notes]

== Configurations
---
[[config]]
=== Default Configuration

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
|Name | String | The name for this configuration. Connectors reference the configuration with this name. | | x
| Connection a| * <<config_basic, Basic>>
* <<config_role, Role>>
 | The connection types to provide to this configuration. | | x
| Globally Defined Default Topic ARN. a| String |  |  |
| Expiration Policy a| <<ExpirationPolicy>> |  Configures the minimum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration. This does not mean that the instance expires at the exact moment that it becomes eligible. Mule purges the instances as appropriate. |  |
|===

==== Connection Types
[[config_basic]]
===== Basic


====== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Session Token a| String |  The session token provided by AWS Security Token Service (STS). |  |
| Test Topic a| String | The topic used to test the connection. |  |
| Connection Timeout a| Number |  The amount of time to wait (in milliseconds) when initially establishing a connection before the connector gives up and times out. A value of 0 means infinity and is not recommended. |  50000 |
| Max Connections a| Number |  Sets the maximum number of allowed open HTTP connections. |  |
| Socket Timeout a| Number |  The amount of time to wait (in milliseconds) for data to be transferred over an established, open connection before the connection times out. A value of 0 means infinity and is not recommended. |  50000 |
| Access Key a| String |  The access key provided by Amazon. |  | x
| Secret Key a| String |  The secret key provided by Amazon. |  | x
| Try Default AWSCredentials Provider Chain a| Boolean |  Set this field to `true` to obtain credentials from the AWS environment. See https://docs.aws.amazon.com/sdk-for-java/v2/developer-guide/credentials.html[Supplying and Receiving AWS Credentials]. |  false |
| Region Endpoint a| String |  Set the topic region endpoint. |  US_EAST_1 |
| Custom Service Endpoint a| String |  Set a custom service endpoint. Useful when a non-standard service endpoint is required, such as a VPC endpoint. For local connections, set this field to `\http://localhost:8000/`. |  |
| TLS Configuration a| <<Tls>> | |  |
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to `true`, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
| Host a| String | Specifies the proxy host, including the protocol. Must be in the format `\http://<host>` or `\https://<host>` (for example, `\https://localhost`). |  |
| Port a| Number | Specifies the proxy port. This parameter is required if a proxy host is provided. |  |
| Username a| String |  The optional proxy username. |  |
| Password a| String |  The optional proxy password. |  |
| Domain a| String |  The optional proxy domain. |  |
| Workstation a| String |  The optional proxy workstation. |  |
|===
[[config_role]]
===== Role


====== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Role ARN a| String |  The Role ARN uniquely identifies role to assume to gain cross account access. |  | x
| Custom STS Endpoint a| String |  Set a custom STS endpoint. Useful when a non-standard service endpoint is required, such as a VPC endpoint. The custom STS endpoint might not work if `DefaultAWSCredentialsProviderChain` is used. Instead, use AWS environment variables such as `AWS_STS_REGIONAL_ENDPOINTS`, `AWS_REGION`, and `AWS_ENDPOINT_URL`. |  |
| Test Topic ARN a| String | The topic used to test the connection. |  |
| Connection Timeout a| Number |  The amount of time to wait (in milliseconds) when initially establishing a connection before the connector gives up and times out. A value of 0 means infinity and is not recommended. |  50000 |
| Max Connections a| Number |  Sets the maximum number of allowed open HTTP connections. |  |
| Socket Timeout a| Number |  The amount of time to wait (in milliseconds) for data to be transferred over an established, open connection before the connection times out. A value of 0 means infinity and is not recommended. |  50000 |
| Access Key a| String |  The access key provided by Amazon. |  | x
| Secret Key a| String |  The secret key provided by Amazon. |  | x
| Try Default AWSCredentials Provider Chain a| Boolean |  Set this field to `true` to obtain credentials from the AWS environment. See: https://docs.aws.amazon.com/sdk-for-java/v2/developer-guide/credentials.html[Supplying and Receiving AWS Credentials]. |  false |
| Region Endpoint a| String |  Set the topic region endpoint. |  US_EAST_1 |
| Custom Service Endpoint a| String |  Set a custom service endpoint. Useful when a non-standard service endpoint is required, such as a VPC endpoint. For local connections, set this field to `\http://localhost:8000/`. |  |
| TLS Configuration a| <<Tls>> |  |  |
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to `true`, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
| Host a| String | Specifies the proxy host, including the protocol. Must be in the format `\http://<host>` or `\https://<host>` (for example, `\https://localhost`). |  |
| Port a| Number | Specifies the proxy port. This parameter is required if a proxy host is provided. |  |
| Username a| String |  The optional proxy username. |  |
| Password a| String |  The optional proxy password. |  |
| Domain a| String |  The optional proxy domain. |  |
| Workstation a| String |  The optional proxy workstation. |  |
|===

== Operations
* <<addPermission>>
* <<confirmSubscription>>
* <<createPlatformApplication>>
* <<createPlatformEndpoint>>
* <<createTopic>>
* <<deleteEndpoint>>
* <<deletePlatformApplication>>
* <<deleteTopic>>
* <<getEndpointAttributes>>
* <<getPlatformApplicationAttributes>>
* <<getSubscriptionAttributes>>
* <<getTopicAttributes>>
* <<listEndpointsByPlatformApplication>>
* <<listPlatformApplications>>
* <<listSubscriptions>>
* <<listSubscriptionsByTopic>>
* <<listTopics>>
* <<publish>>
* <<removePermission>>
* <<setEndpointAttributes>>
* <<setPlatformApplicationAttributes>>
* <<setSubscriptionAttributes>>
* <<setTopicAttributes>>
* <<subscribe>>
* <<unsubscribe>>

[[addPermission]]
=== Add Permission
`<sns:add-permission>`


Adds a statement to a topic's access control policy, granting access for the specified AWS accounts to the specified actions. See the http://docs.aws.amazon.com/sns/latest/api/API_AddPermission.html[Amazon SNS API Reference].


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Topic Arn a| String |  The ARN of the topic whose access control policy you wish to modify. |  | x
| Label a| String |  A unique identifier for the new policy statement. |  | x
| Account Ids a| Array of String |  The AWS account IDs of the users (principals) who will be given access to the specified actions. The users must have AWS accounts, but do not need to be signed up for this service. |  | x
| Action Names a| Array of String |  The action you want to allow for the specified principals. |  | x
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |String
|===

=== For Configurations
* <<config>>

==== Throws
* SNS:INVALID_PARAMETER_VALUE
* SNS:INVALID_PARAMETER
* SNS:INTERNAL_ERROR
* SNS:CONNECTIVITY
* SNS:THROTTLED
* SNS:TOPIC_LIMIT_EXCEEDED
* SNS:AUTHORIZATION_ERROR
* SNS:UNDEFINED_TOPIC
* SNS:NOT_FOUND
* SNS:SUBSCRIPTION_LIMIT_EXCEEDED
* SNS:ENDPOINT_DISABLED
* SNS:UNKNOWN
* SNS:RETRY_EXHAUSTED
* SNS:PLATFORM_APPLICATION_DISABLED


[[confirmSubscription]]
=== Confirm Subscription
`<sns:confirm-subscription>`

The confirmSubscription action verifies an endpoint owner's intent to receive messages by validating the token sent to the endpoint by an earlier Subscribe action. If the token is valid, the action creates a new subscription and returns its Amazon Resource Name (ARN). This call requires an AWS signature only when the AuthenticateOnUnsubscribe flag is set to `true`. See the http://docs.aws.amazon.com/sns/latest/api/API_ConfirmSubscription.html[Amazon SNS API Reference].

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Topic Arn a| String |  The ARN of the topic for which you wish to confirm a subscription. |  | x
| Token a| String |  Short-lived token sent to an endpoint during the `Subscribe` action. |  | x
| Authenticate On Unsubscribe a| String |  Disallows unauthenticated unsubscribes of the subscription. If the value of this parameter is `true` and the request has an AWS signature, then only the topic owner and the subscription owner can unsubscribe the endpoint. The unsubscribe action requires AWS authentication. |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |String
| Attributes Type a| <<RequestIDAttribute>>
|===

=== For Configurations
* <<config>>

==== Throws
* SNS:INVALID_PARAMETER_VALUE
* SNS:INVALID_PARAMETER
* SNS:INTERNAL_ERROR
* SNS:CONNECTIVITY
* SNS:THROTTLED
* SNS:TOPIC_LIMIT_EXCEEDED
* SNS:AUTHORIZATION_ERROR
* SNS:UNDEFINED_TOPIC
* SNS:NOT_FOUND
* SNS:SUBSCRIPTION_LIMIT_EXCEEDED
* SNS:ENDPOINT_DISABLED
* SNS:UNKNOWN
* SNS:RETRY_EXHAUSTED
* SNS:PLATFORM_APPLICATION_DISABLED


[[createPlatformApplication]]
=== Create Platform Application
`<sns:create-platform-application>`


Creates a platform application object for one of the supported push notification services, such as APNs (Apple Push Notification service) and GCM (Google Cloud Messaging), to which devices and mobile apps may register. See the http://docs.aws.amazon.com/sns/latest/api/API_CreatePlatformApplication.html[Amazon SNS API Reference].


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Name a| String |  Application names must be made up of only uppercase and lowercase ASCII letters, numbers, underscores, hyphens, and periods, and must be between 1 and 256 characters long. |  | x
| Platform a| String |  The following platforms are supported: ADM (Amazon Device Messaging), APNs (Apple Push Notification service), APNS_SANDBOX, and GCM (Google Cloud Messaging). |  | x
| Attributes a| Object |  The list of attributes. |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |String
| Attributes Type a| <<RequestIDAttribute>>
|===

=== For Configurations
* <<config>>

==== Throws
* SNS:INVALID_PARAMETER_VALUE
* SNS:INVALID_PARAMETER
* SNS:INTERNAL_ERROR
* SNS:CONNECTIVITY
* SNS:THROTTLED
* SNS:TOPIC_LIMIT_EXCEEDED
* SNS:AUTHORIZATION_ERROR
* SNS:UNDEFINED_TOPIC
* SNS:NOT_FOUND
* SNS:SUBSCRIPTION_LIMIT_EXCEEDED
* SNS:ENDPOINT_DISABLED
* SNS:UNKNOWN
* SNS:RETRY_EXHAUSTED
* SNS:PLATFORM_APPLICATION_DISABLED


[[createPlatformEndpoint]]
=== Create Platform Endpoint
`<sns:create-platform-endpoint>`


Creates an endpoint for a device and mobile app on one of the supported push notification services. CreatePlatformEndpoint requires the PlatformApplicationArn that is returned from CreatePlatformApplication. See the http://docs.aws.amazon.com/sns/latest/api/API_CreatePlatformEndpoint.html[Amazon SNS API Reference].


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Platform Application Arn a| String |  PlatformApplicationArn returned from CreatePlatformApplication is used to create a an endpoint. |  | x
| Token a| String |  Unique identifier created by the notification service for an app on a device. The specific name for Token will vary, depending on which notification service is being used. For example, when using APNs (Apple Push Notification service) as the notification service, you need the device token. Alternatively, when using GCM (Google Cloud Messaging) or ADM (Amazon Device Messaging), the device token equivalent is called the registration ID. |  | x
| Custom User Data a| String |  Arbitrary user data to associate with the endpoint. Amazon SNS does not use this data. The data must be in UTF-8 format and less than 2KB. |  | x
| Attributes a| Object |  The list of attributes. |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |String
| Attributes Type a| <<RequestIDAttribute>>
|===

=== For Configurations
* <<config>>

==== Throws
* SNS:INVALID_PARAMETER_VALUE
* SNS:INVALID_PARAMETER
* SNS:INTERNAL_ERROR
* SNS:CONNECTIVITY
* SNS:THROTTLED
* SNS:TOPIC_LIMIT_EXCEEDED
* SNS:AUTHORIZATION_ERROR
* SNS:UNDEFINED_TOPIC
* SNS:NOT_FOUND
* SNS:SUBSCRIPTION_LIMIT_EXCEEDED
* SNS:ENDPOINT_DISABLED
* SNS:UNKNOWN
* SNS:RETRY_EXHAUSTED
* SNS:PLATFORM_APPLICATION_DISABLED


[[createTopic]]
=== Create Topic
`<sns:create-topic>`


The CreateTopic action creates a topic to which notifications can be published. Users can create at most 100 topics. See the http://docs.aws.amazon.com/sns/latest/api/API_CreateTopic.html[Amazon SNS API Reference].


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Topic Name a| String | The name of the topic. Maximum 256 characters. Can include alphanumeric characters, hyphens, and underscores. FIFO topic names must end with `.fifo`. |  | x
| Content Based Deduplication a| Boolean |  Enables content-based deduplication for FIFO topics. If you create a FIFO topic and set this parameter to `false`, you must specify a value for the *Message Deduplication Id* parameter for the *Publish* operation. When you set this parameter to `true`, Amazon SNS uses a SHA-256 hash to generate the message deduplication ID using the body of the message (but not the attributes of the message).| true |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |String
| Attributes Type a| <<RequestIDAttribute>>
|===

=== For Configurations
* <<config>>

==== Throws
* SNS:INVALID_PARAMETER_VALUE
* SNS:INVALID_PARAMETER
* SNS:INTERNAL_ERROR
* SNS:CONNECTIVITY
* SNS:THROTTLED
* SNS:TOPIC_LIMIT_EXCEEDED
* SNS:AUTHORIZATION_ERROR
* SNS:UNDEFINED_TOPIC
* SNS:NOT_FOUND
* SNS:SUBSCRIPTION_LIMIT_EXCEEDED
* SNS:ENDPOINT_DISABLED
* SNS:UNKNOWN
* SNS:RETRY_EXHAUSTED
* SNS:PLATFORM_APPLICATION_DISABLED


[[deleteEndpoint]]
=== Delete Endpoint
`<sns:delete-endpoint>`


Deletes the endpoint for a device and mobile app from Amazon SNS. See the http://docs.aws.amazon.com/sns/latest/api/API_DeleteEndpoint.html[Amazon SNS API Reference].


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Endpoint Arn a| String |  EndpointArn of endpoint to delete. |  | x
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |String
|===

=== For Configurations
* <<config>>

==== Throws
* SNS:INVALID_PARAMETER_VALUE
* SNS:INVALID_PARAMETER
* SNS:INTERNAL_ERROR
* SNS:CONNECTIVITY
* SNS:THROTTLED
* SNS:TOPIC_LIMIT_EXCEEDED
* SNS:AUTHORIZATION_ERROR
* SNS:UNDEFINED_TOPIC
* SNS:NOT_FOUND
* SNS:SUBSCRIPTION_LIMIT_EXCEEDED
* SNS:ENDPOINT_DISABLED
* SNS:UNKNOWN
* SNS:RETRY_EXHAUSTED
* SNS:PLATFORM_APPLICATION_DISABLED


[[deletePlatformApplication]]
=== Delete Platform Application
`<sns:delete-platform-application>`


Deletes a platform application object for one of the supported push notification services, such as APNs (Apple Push Notification service) and GCM (Google Cloud Messaging). See the http://docs.aws.amazon.com/sns/latest/api/API_DeletePlatformApplication.html[Amazon SNS API Reference].


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Platform Application Arn a| String |  PlatformApplicationArn of platform application object to delete. |  | x
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |String
|===

=== For Configurations
* <<config>>

==== Throws
* SNS:INVALID_PARAMETER_VALUE
* SNS:INVALID_PARAMETER
* SNS:INTERNAL_ERROR
* SNS:CONNECTIVITY
* SNS:THROTTLED
* SNS:TOPIC_LIMIT_EXCEEDED
* SNS:AUTHORIZATION_ERROR
* SNS:UNDEFINED_TOPIC
* SNS:NOT_FOUND
* SNS:SUBSCRIPTION_LIMIT_EXCEEDED
* SNS:ENDPOINT_DISABLED
* SNS:UNKNOWN
* SNS:RETRY_EXHAUSTED
* SNS:PLATFORM_APPLICATION_DISABLED


[[deleteTopic]]
=== Delete Topic
`<sns:delete-topic>`


The DeleteTopic action deletes a topic and all its subscriptions. Deleting a topic might prevent some messages previously sent to the topic from being delivered to subscribers. This action is idempotent, so deleting a topic that does not exist does not result in an error. See the http://docs.aws.amazon.com/sns/latest/api/API_DeleteTopic.html[Amazon SNS API Reference].


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Topic Arn a| String |  The ARN of the topic you want to delete. |  | x
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===


=== For Configurations
* <<config>>

==== Throws
* SNS:INVALID_PARAMETER_VALUE
* SNS:INVALID_PARAMETER
* SNS:INTERNAL_ERROR
* SNS:CONNECTIVITY
* SNS:THROTTLED
* SNS:TOPIC_LIMIT_EXCEEDED
* SNS:AUTHORIZATION_ERROR
* SNS:UNDEFINED_TOPIC
* SNS:NOT_FOUND
* SNS:SUBSCRIPTION_LIMIT_EXCEEDED
* SNS:ENDPOINT_DISABLED
* SNS:UNKNOWN
* SNS:RETRY_EXHAUSTED
* SNS:PLATFORM_APPLICATION_DISABLED


[[getEndpointAttributes]]
=== Get Endpoint Attributes
`<sns:get-endpoint-attributes>`


Retrieves the endpoint attributes for a device on one of the supported push notification services, such as GCM (Google Cloud Messaging) and APNs (Apple Push Notification service). See the http://docs.aws.amazon.com/sns/latest/api/API_GetEndpointAttributes.html[Amazon SNS API Reference].


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Endpoint Arn a| String |  EndpointArn for GetEndpointAttributes input. |  | x
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Object
| Attributes Type a| <<RequestIDAttribute>>
|===

=== For Configurations
* <<config>>

==== Throws
* SNS:INVALID_PARAMETER_VALUE
* SNS:INVALID_PARAMETER
* SNS:INTERNAL_ERROR
* SNS:CONNECTIVITY
* SNS:THROTTLED
* SNS:TOPIC_LIMIT_EXCEEDED
* SNS:AUTHORIZATION_ERROR
* SNS:UNDEFINED_TOPIC
* SNS:NOT_FOUND
* SNS:SUBSCRIPTION_LIMIT_EXCEEDED
* SNS:ENDPOINT_DISABLED
* SNS:UNKNOWN
* SNS:RETRY_EXHAUSTED
* SNS:PLATFORM_APPLICATION_DISABLED


[[getPlatformApplicationAttributes]]
=== Get Platform Application Attributes
`<sns:get-platform-application-attributes>`


Retrieves the attributes of the platform application object for the supported push notification services, such as APNs (Apple Push Notification service)and GCM (Google Cloud Messaging). See the http://docs.aws.amazon.com/sns/latest/api/API_GetPlatformApplicationAttributes.html[Amazon SNS API Reference].


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Platform Application Arn a| String |  PlatformApplicationArn for GetPlatformApplicationAttributesInput. |  | x
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Object
| Attributes Type a| <<RequestIDAttribute>>
|===

=== For Configurations
* <<config>>

==== Throws
* SNS:INVALID_PARAMETER_VALUE
* SNS:INVALID_PARAMETER
* SNS:INTERNAL_ERROR
* SNS:CONNECTIVITY
* SNS:THROTTLED
* SNS:TOPIC_LIMIT_EXCEEDED
* SNS:AUTHORIZATION_ERROR
* SNS:UNDEFINED_TOPIC
* SNS:NOT_FOUND
* SNS:SUBSCRIPTION_LIMIT_EXCEEDED
* SNS:ENDPOINT_DISABLED
* SNS:UNKNOWN
* SNS:RETRY_EXHAUSTED
* SNS:PLATFORM_APPLICATION_DISABLED


[[getSubscriptionAttributes]]
=== Get Subscription Attributes
`<sns:get-subscription-attributes>`


The GetSubscriptionAttributes action returns all of the properties of a subscription. See the http://docs.aws.amazon.com/sns/latest/api/API_GetSubscriptionAttributes.html[Amazon SNS API Reference].


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Subscription Arn a| String |  The ARN of the subscription whose properties you want to get |  | x
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Object
| Attributes Type a| <<RequestIDAttribute>>
|===

=== For Configurations
* <<config>>

==== Throws
* SNS:INVALID_PARAMETER_VALUE
* SNS:INVALID_PARAMETER
* SNS:INTERNAL_ERROR
* SNS:CONNECTIVITY
* SNS:THROTTLED
* SNS:TOPIC_LIMIT_EXCEEDED
* SNS:AUTHORIZATION_ERROR
* SNS:UNDEFINED_TOPIC
* SNS:NOT_FOUND
* SNS:SUBSCRIPTION_LIMIT_EXCEEDED
* SNS:ENDPOINT_DISABLED
* SNS:UNKNOWN
* SNS:RETRY_EXHAUSTED
* SNS:PLATFORM_APPLICATION_DISABLED


[[getTopicAttributes]]
=== Get Topic Attributes
`<sns:get-topic-attributes>`


The GetTopicAttributes action returns all of the properties of a topic. Topic properties returned might differ based on the authorization of the user. See the http://docs.aws.amazon.com/sns/latest/api/API_GetTopicAttributes.html[Amazon SNS API Reference].


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Topic Arn a| String |  The ARN of the topic whose properties you want to get. |  | x
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Object
| Attributes Type a| <<RequestIDAttribute>>
|===

=== For Configurations
* <<config>>

==== Throws
* SNS:INVALID_PARAMETER_VALUE
* SNS:INVALID_PARAMETER
* SNS:INTERNAL_ERROR
* SNS:CONNECTIVITY
* SNS:THROTTLED
* SNS:TOPIC_LIMIT_EXCEEDED
* SNS:AUTHORIZATION_ERROR
* SNS:UNDEFINED_TOPIC
* SNS:NOT_FOUND
* SNS:SUBSCRIPTION_LIMIT_EXCEEDED
* SNS:ENDPOINT_DISABLED
* SNS:UNKNOWN
* SNS:RETRY_EXHAUSTED
* SNS:PLATFORM_APPLICATION_DISABLED


[[listEndpointsByPlatformApplication]]
=== List Endpoints By Platform Application
`<sns:list-endpoints-by-platform-application>`


Lists the endpoints and endpoint attributes for devices in a supported push notification service, such as GCM (Google Cloud Messaging) and APNs (Apple Push Notification service). See the http://docs.aws.amazon.com/sns/latest/api/API_ListEndpointsByPlatformApplication.html[Amazon SNS API Reference].


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Arn a| String |  The ARN of the platform application. |  | x
| Streaming Strategy a| * <<repeatable-in-memory-iterable>>
* <<repeatable-file-store-iterable>>
* non-repeatable-iterable |  Configure to use repeatable streams. |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Array of Message of [<<Endpoint>>] payload and [<<RequestIDAttribute>>] attributes
|===

=== For Configurations
* <<config>>

==== Throws
* SNS:INVALID_PARAMETER_VALUE
* SNS:INVALID_PARAMETER
* SNS:UNDEFINED_TOPIC
* SNS:INTERNAL_ERROR
* SNS:NOT_FOUND
* SNS:THROTTLED
* SNS:SUBSCRIPTION_LIMIT_EXCEEDED
* SNS:TOPIC_LIMIT_EXCEEDED
* SNS:ENDPOINT_DISABLED
* SNS:UNKNOWN
* SNS:PLATFORM_APPLICATION_DISABLED
* SNS:AUTHORIZATION_ERROR


[[listPlatformApplications]]
=== List Platform Applications
`<sns:list-platform-applications>`


Lists the platform application objects for the supported push notification services, such as APNs (Apple Push Notification service)and GCM (Google Cloud Messaging). See the http://docs.aws.amazon.com/sns/latest/api/API_ListPlatformApplications.html[Amazon SNS API Reference].


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Streaming Strategy a| * <<repeatable-in-memory-iterable>>
* <<repeatable-file-store-iterable>>
* non-repeatable-iterable |  Configure to use repeatable streams. |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Array of Message of [<<PlatformApplication>>] payload and [<<RequestIDAttribute>>] attributes
|===

=== For Configurations
* <<config>>

==== Throws
* SNS:INVALID_PARAMETER_VALUE
* SNS:INVALID_PARAMETER
* SNS:UNDEFINED_TOPIC
* SNS:INTERNAL_ERROR
* SNS:NOT_FOUND
* SNS:THROTTLED
* SNS:SUBSCRIPTION_LIMIT_EXCEEDED
* SNS:TOPIC_LIMIT_EXCEEDED
* SNS:ENDPOINT_DISABLED
* SNS:UNKNOWN
* SNS:PLATFORM_APPLICATION_DISABLED
* SNS:AUTHORIZATION_ERROR


[[listSubscriptions]]
=== List Subscriptions
`<sns:list-subscriptions>`


The ListSubscriptions action returns a list of the requester's subscriptions. Each call returns a limited list of subscriptions, up to 100. If there are more subscriptions, a NextToken is also returned. Use the NextToken parameter in a new ListSubscriptions call to get further results. See the http://docs.aws.amazon.com/sns/latest/api/API_ListSubscriptions.html[Amazon SNS API Reference].


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Streaming Strategy a| * <<repeatable-in-memory-iterable>>
* <<repeatable-file-store-iterable>>
* non-repeatable-iterable |  Configure to use repeatable streams. |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Array of Message of [<<Subscription>>] payload and [<<RequestIDAttribute>>] attributes
|===

=== For Configurations
* <<config>>

==== Throws
* SNS:INVALID_PARAMETER_VALUE
* SNS:INVALID_PARAMETER
* SNS:UNDEFINED_TOPIC
* SNS:INTERNAL_ERROR
* SNS:NOT_FOUND
* SNS:THROTTLED
* SNS:SUBSCRIPTION_LIMIT_EXCEEDED
* SNS:TOPIC_LIMIT_EXCEEDED
* SNS:ENDPOINT_DISABLED
* SNS:UNKNOWN
* SNS:PLATFORM_APPLICATION_DISABLED
* SNS:AUTHORIZATION_ERROR


[[listSubscriptionsByTopic]]
=== List Subscriptions By Topic
`<sns:list-subscriptions-by-topic>`


The SubscriptionsByTopic action returns a list of the subscriptions to a specific topic. Each call returns a limited list of subscriptions, up to 100. If there are more subscriptions, a NextToken is also returned. Use the NextToken parameter in a new SubscriptionsByTopic call to get further results. See the http://docs.aws.amazon.com/sns/latest/api/API_ListSubscriptionsByTopic.html[Amazon SNS API Reference].


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Arn a| String |  The ARN of the topic. |  | x
| Streaming Strategy a| * <<repeatable-in-memory-iterable>>
* <<repeatable-file-store-iterable>>
* non-repeatable-iterable |  Configure to use repeatable streams. |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Array of Message of [<<Subscription>>] payload and [<<RequestIDAttribute>>] attributes
|===

=== For Configurations
* <<config>>

==== Throws
* SNS:INVALID_PARAMETER_VALUE
* SNS:INVALID_PARAMETER
* SNS:UNDEFINED_TOPIC
* SNS:INTERNAL_ERROR
* SNS:NOT_FOUND
* SNS:THROTTLED
* SNS:SUBSCRIPTION_LIMIT_EXCEEDED
* SNS:TOPIC_LIMIT_EXCEEDED
* SNS:ENDPOINT_DISABLED
* SNS:UNKNOWN
* SNS:PLATFORM_APPLICATION_DISABLED
* SNS:AUTHORIZATION_ERROR


[[listTopics]]
=== List Topics
`<sns:list-topics>`


The ListTopics action returns a list of the requester's topics. Each call returns a limited list of topics, up to 100. If there are more topics, a NextToken is also returned. Use the NextToken parameter in a new ListTopics call to get further results. See the http://docs.aws.amazon.com/sns/latest/api/API_ListTopics.html[Amazon SNS API Reference].


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Streaming Strategy a| * <<repeatable-in-memory-iterable>>
* <<repeatable-file-store-iterable>>
* non-repeatable-iterable |  Configure to use repeatable streams. |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Array of Message of [String] payload and [<<RequestIDAttribute>>] attributes
|===

=== For Configurations
* <<config>>

==== Throws
* SNS:INVALID_PARAMETER_VALUE
* SNS:INVALID_PARAMETER
* SNS:UNDEFINED_TOPIC
* SNS:INTERNAL_ERROR
* SNS:NOT_FOUND
* SNS:THROTTLED
* SNS:SUBSCRIPTION_LIMIT_EXCEEDED
* SNS:TOPIC_LIMIT_EXCEEDED
* SNS:ENDPOINT_DISABLED
* SNS:UNKNOWN
* SNS:PLATFORM_APPLICATION_DISABLED
* SNS:AUTHORIZATION_ERROR


[[publish]]
=== Publish
`<sns:publish>`


The Publish action sends a message to all of a topic's subscribed endpoints. A returned messageId indicates that the message was saved and Amazon SNS will attempt to deliver it to the topic's subscribers shortly. The format of the outgoing message to each subscribed endpoint depends on the notification protocol selected. See the http://docs.aws.amazon.com/sns/latest/api/API_Publish.html[Amazon SNS API Reference].


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| FIFO Parameters a| <<FifoParameters>> | Parameters related to the FIFO topic. |  |
| Message a| String |  The message you want to send to the topic. |  `#[payload]` |
| Subject a| String |  Optional parameter to use as the "Subject" line when the message is delivered to email endpoints. This field will also be included, if present, in the standard JSON messages delivered to other endpoints. |  |
| Message Structure a| String |  Set MessageStructure to `json` if you want to send a different message for each protocol. |  |
| Message Attributes a| Object |  The Amazon SNS message attributes, as described in the https://docs.aws.amazon.com/sns/latest/dg/welcome.html[Amazon Simple Notification Service Developer Guide].
 |  |
| Topic Arn a| String |  Amazon Resource Name (ARN) of the topic you want to publish to. This field and the Target Arn field are mutually exclusive. |  |
| Target Arn a| String |  Amazon Resource Name (ARN) of the platform endpoint you want to publish to. This field and the Topic Arn field are mutually exclusive. |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |String
| Attributes Type a| <<RequestIDAttribute>>
|===

=== For Configurations
* <<config>>

==== Throws
* SNS:INVALID_PARAMETER_VALUE
* SNS:INVALID_PARAMETER
* SNS:INTERNAL_ERROR
* SNS:CONNECTIVITY
* SNS:THROTTLED
* SNS:TOPIC_LIMIT_EXCEEDED
* SNS:AUTHORIZATION_ERROR
* SNS:UNDEFINED_TOPIC
* SNS:NOT_FOUND
* SNS:SUBSCRIPTION_LIMIT_EXCEEDED
* SNS:ENDPOINT_DISABLED
* SNS:UNKNOWN
* SNS:RETRY_EXHAUSTED
* SNS:PLATFORM_APPLICATION_DISABLED


[[removePermission]]
=== Remove Permission
`<sns:remove-permission>`


The RemovePermission action removes a statement from a topic's access control policy. See the http://docs.aws.amazon.com/sns/latest/api/API_RemovePermission.html[Amazon SNS API Reference].


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Topic Arn a| String |  The ARN of the topic whose access control policy you wish to modify. |  | x
| Label a| String |  The unique label of the statement you want to remove. |  | x
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |String
|===

=== For Configurations
* <<config>>

==== Throws
* SNS:INVALID_PARAMETER_VALUE
* SNS:INVALID_PARAMETER
* SNS:INTERNAL_ERROR
* SNS:CONNECTIVITY
* SNS:THROTTLED
* SNS:TOPIC_LIMIT_EXCEEDED
* SNS:AUTHORIZATION_ERROR
* SNS:UNDEFINED_TOPIC
* SNS:NOT_FOUND
* SNS:SUBSCRIPTION_LIMIT_EXCEEDED
* SNS:ENDPOINT_DISABLED
* SNS:UNKNOWN
* SNS:RETRY_EXHAUSTED
* SNS:PLATFORM_APPLICATION_DISABLED


[[setEndpointAttributes]]
=== Set Endpoint Attributes
`<sns:set-endpoint-attributes>`


Sets the attributes for an endpoint for a device on one of the supported push notification services, such as GCM (Google Cloud Messaging) and APNs (Apple Push Notification service). See the http://docs.aws.amazon.com/sns/latest/api/API_SetEndpointAttributes.html[Amazon SNS API Reference].


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Endpoint a| <<Endpoint>> |  Container for the parameters to the SetEndpointAttributes operation. |  `#[payload]` |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |String
|===

=== For Configurations
* <<config>>

==== Throws
* SNS:INVALID_PARAMETER_VALUE
* SNS:INVALID_PARAMETER
* SNS:INTERNAL_ERROR
* SNS:CONNECTIVITY
* SNS:THROTTLED
* SNS:TOPIC_LIMIT_EXCEEDED
* SNS:AUTHORIZATION_ERROR
* SNS:UNDEFINED_TOPIC
* SNS:NOT_FOUND
* SNS:SUBSCRIPTION_LIMIT_EXCEEDED
* SNS:ENDPOINT_DISABLED
* SNS:UNKNOWN
* SNS:RETRY_EXHAUSTED
* SNS:PLATFORM_APPLICATION_DISABLED


[[setPlatformApplicationAttributes]]
=== Set Platform Application Attributes
`<sns:set-platform-application-attributes>`


Sets the attributes of the platform application object for the supported push notification services, such as APNs (Apple Push Notification service) and GCM (Google Cloud Messaging). See the http://docs.aws.amazon.com/sns/latest/api/API_SetPlatformApplicationAttributes.html[Amazon SNS API Reference].


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Platform Application Attributes a| <<PlatformApplication>> |  Container for the parameters to the SetPlatformApplicationAttributes operation. |  `#[payload]` |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |String
|===

=== For Configurations
* <<config>>

==== Throws
* SNS:INVALID_PARAMETER_VALUE
* SNS:INVALID_PARAMETER
* SNS:INTERNAL_ERROR
* SNS:CONNECTIVITY
* SNS:THROTTLED
* SNS:TOPIC_LIMIT_EXCEEDED
* SNS:AUTHORIZATION_ERROR
* SNS:UNDEFINED_TOPIC
* SNS:NOT_FOUND
* SNS:SUBSCRIPTION_LIMIT_EXCEEDED
* SNS:ENDPOINT_DISABLED
* SNS:UNKNOWN
* SNS:RETRY_EXHAUSTED
* SNS:PLATFORM_APPLICATION_DISABLED


[[setSubscriptionAttributes]]
=== Set Subscription Attributes
`<sns:set-subscription-attributes>`


The SubscriptionAttributes action allows a subscription owner to set an attribute of the topic to a new value. See the http://docs.aws.amazon.com/sns/latest/api/API_SetSubscriptionAttributes.html[Amazon SNS API Reference].


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Subscription Arn a| String |  The ARN of the subscription. |  | x
| Attribute Name a| String |  The name of the attribute. |  | x
| Attribute Value a| String |  The value of the attribute. |  | x
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |String
|===

=== For Configurations
* <<config>>

==== Throws
* SNS:INVALID_PARAMETER_VALUE
* SNS:INVALID_PARAMETER
* SNS:INTERNAL_ERROR
* SNS:CONNECTIVITY
* SNS:THROTTLED
* SNS:TOPIC_LIMIT_EXCEEDED
* SNS:AUTHORIZATION_ERROR
* SNS:UNDEFINED_TOPIC
* SNS:NOT_FOUND
* SNS:SUBSCRIPTION_LIMIT_EXCEEDED
* SNS:ENDPOINT_DISABLED
* SNS:UNKNOWN
* SNS:RETRY_EXHAUSTED
* SNS:PLATFORM_APPLICATION_DISABLED


[[setTopicAttributes]]
=== Set Topic Attributes
`<sns:set-topic-attributes>`


The TopicAttributes action allows a topic owner to set an attribute of the topic to a new value. See the http://docs.aws.amazon.com/sns/latest/api/API_SetTopicAttributes.html[Amazon SNS API Reference].


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Topic Arn a| String |  The ARN of the topic. |  | x
| Attribute Name a| String |  The name of the attribute. |  | x
| Attribute Value a| String |  The value of the attribute. |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |String
|===

=== For Configurations
* <<config>>

==== Throws
* SNS:INVALID_PARAMETER_VALUE
* SNS:INVALID_PARAMETER
* SNS:INTERNAL_ERROR
* SNS:CONNECTIVITY
* SNS:THROTTLED
* SNS:TOPIC_LIMIT_EXCEEDED
* SNS:AUTHORIZATION_ERROR
* SNS:UNDEFINED_TOPIC
* SNS:NOT_FOUND
* SNS:SUBSCRIPTION_LIMIT_EXCEEDED
* SNS:ENDPOINT_DISABLED
* SNS:UNKNOWN
* SNS:RETRY_EXHAUSTED
* SNS:PLATFORM_APPLICATION_DISABLED


[[subscribe]]
=== Subscribe
`<sns:subscribe>`


The Subscribe action prepares to subscribe an endpoint by sending the endpoint a confirmation message. To actually create a subscription, the endpoint owner must call the confirmSubscription action with the token from the confirmation message. Confirmation tokens are valid for three days. See the http://docs.aws.amazon.com/sns/latest/api/API_Subscribe.html[Amazon SNS API Reference].


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Topic Arn a| String |  The ARN of the topic you want to subscribe to. |  | x
| Protocol a| Enumeration, one of:

** HTTP
** HTTPS
** EMAIL
** EMAIL_JSON
** SMS
** SQS
** APPLICATION
** LAMBDA |  The protocol you want to use. If it is a FIFO topic, then only Amazon SQS FIFO queues can be subscribers. |  | x
| Endpoint a| String |  The endpoint that you want to receive notifications. Endpoints vary by protocol:

* HTTP - The endpoint is an URL beginning with `http://`.
* HTTPS - The endpoint is a URL beginning with `https://`.
* EMAIL - The endpoint is an email address.
* EMAIL_JSON - The endpoint is an email address.
* SMS - The endpoint is a phone number of an SMS-enabled device.
* SQS - The endpoint is the ARN of an Amazon SQS queue.
* APPLICATION - The endpoint is the endpoint of a mobile app and device.
* LAMBDA - The endpoint is the ARN of an AWS Lambda function.|  | x
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |String
| Attributes Type a| <<RequestIDAttribute>>
|===

=== For Configurations
* <<config>>

==== Throws
* SNS:INVALID_PARAMETER_VALUE
* SNS:INVALID_PARAMETER
* SNS:INTERNAL_ERROR
* SNS:CONNECTIVITY
* SNS:THROTTLED
* SNS:TOPIC_LIMIT_EXCEEDED
* SNS:AUTHORIZATION_ERROR
* SNS:UNDEFINED_TOPIC
* SNS:NOT_FOUND
* SNS:SUBSCRIPTION_LIMIT_EXCEEDED
* SNS:ENDPOINT_DISABLED
* SNS:UNKNOWN
* SNS:RETRY_EXHAUSTED
* SNS:PLATFORM_APPLICATION_DISABLED


[[unsubscribe]]
=== Unsubscribe
`<sns:unsubscribe>`


The Unsubscribe action deletes a subscription. If the subscription requires authentication for deletion, only the owner of the subscription or the topic owner can unsubscribe, and an AWS signature is required. If the Unsubscribe call does not require authentication and the requester is not the subscription owner, a final cancellation message is delivered to the endpoint, so that the endpoint owner can easily resubscribe to the topic if the Unsubscribe request was unintended. See the http://docs.aws.amazon.com/sns/latest/api/API_Unsubscribe.html[Amazon SNS API Reference].


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Subscription Arn a| String |  The ARN of the subscription to be deleted. |  | x
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |String
|===

=== For Configurations
* <<config>>

==== Throws
* SNS:INVALID_PARAMETER_VALUE
* SNS:INVALID_PARAMETER
* SNS:INTERNAL_ERROR
* SNS:CONNECTIVITY
* SNS:THROTTLED
* SNS:TOPIC_LIMIT_EXCEEDED
* SNS:AUTHORIZATION_ERROR
* SNS:UNDEFINED_TOPIC
* SNS:NOT_FOUND
* SNS:SUBSCRIPTION_LIMIT_EXCEEDED
* SNS:ENDPOINT_DISABLED
* SNS:UNKNOWN
* SNS:RETRY_EXHAUSTED
* SNS:PLATFORM_APPLICATION_DISABLED



== Types
[[Tls]]
=== TLS

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Enabled Protocols a| String | A comma-separated list of protocols enabled for this context. |  |
| Enabled Cipher Suites a| String | A comma-separated list of cipher suites enabled for this context. |  |
| Trust Store a| <<TrustStore>> | For servers, a trust store contains certificates of the trusted clients. For clients, a trust store contains certificates of the trusted servers. |  |
| Key Store a| <<KeyStore>> | For servers, a key store contains the private and public key of the server. For clients, a key store contains the private and public key of the client. |  |
| Revocation Check a| * <<standard-revocation-check>>
* <<custom-ocsp-responder>>
* <<crl-file>> |  Validates that a certificate was revoked.|  |
|===

[[TrustStore]]
=== Trust Store

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | The location of the trust store. The path is resolved relative to the current classpath and file system, if possible. |  |
| Password a| String | The password used to protect the trust store. |  |
| Type a| String | The type of store used. |  |
| Algorithm a| String | The algorithm used by the trust store. |  |
| Insecure a| Boolean | If `true`, no certificate validations will be performed, rendering connections vulnerable to attacks. Use at your own risk. |  |
|===

[[KeyStore]]
=== Key Store

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | The location of the key store. The path is resolved relative to the current classpath and file system, if possible.  |  |
| Type a| String | The type of store used. |  |
| Alias a| String | When the key store contains many private keys, this attribute indicates the alias of the key that should be used. If not defined, the first key in the file is used by default. |  |
| Key Password a| String | The password used to protect the private key. |  |
| Password a| String | The password used to protect the key store. |  |
| Algorithm a| String | The algorithm used by the key store. |  |
|===

[[standard-revocation-check]]
=== Standard Revocation Check

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Only End Entities a| Boolean | Only verify the last element of the certificate chain. |  |
| Prefer Crls a| Boolean | Try CRL instead of OCSP first. |  |
| No Fallback a| Boolean | Do not use the secondary checking method (the one not selected before). |  |
| Soft Fail a| Boolean | Avoid verification failure when the revocation server can not be reached or is busy. |  |
|===

[[custom-ocsp-responder]]
=== Custom OCSP Responder

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Url a| String | The URL of the OCSP responder. |  |
| Cert Alias a| String | Alias of the signing certificate for the OCSP response (must be in the trust store), if present. |  |
|===

[[crl-file]]
=== CRL File

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | The path to the CRL file. |  |
|===

[[Reconnection]]
=== Reconnection

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Fails Deployment a| Boolean | When the application is deployed, a connectivity test is performed on all connectors. If set to `true`, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> | The reconnection strategy to use. |  |
|===

[[reconnect]]
=== Reconnect

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often in milliseconds to reconnect. | |
| Count a| Number | How many reconnection attempts to make.. | |
| blocking |Boolean |If false, the reconnection strategy runs in a separate, non-blocking thread. |true |
|===

[[reconnect-forever]]
=== Reconnect Forever

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often in milliseconds to reconnect. | |
| blocking |Boolean |If false, the reconnection strategy runs in a separate, non-blocking thread. |unsubscribe |
|===

[[ExpirationPolicy]]
=== Expiration Policy

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Max Idle Time a| Number | A scalar time value for the maximum amount of time a dynamic configuration instance should be allowed to be idle before it's considered eligible for expiration. |  |
| Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | A time unit that qualifies the maxIdleTime attribute |  |
|===

[[RequestIDAttribute]]
=== Request ID Attribute

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Request Id a| String |  |  |
|===

[[Endpoint]]
=== Endpoint

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Attributes a| Object |  |  |
| Endpoint Arn a| String |  |  |
|===

[[repeatable-in-memory-iterable]]
=== Repeatable In Memory Iterable

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Initial Buffer Size a| Number | The amount of instances that is initially be allowed to be kept in memory to consume the stream and provide random access to it. If the stream contains more data than can fit into this buffer, then the buffer expands according to the bufferSizeIncrement attribute, with an upper limit of maxInMemorySize. Default value is 100 instances. |  |
| Buffer Size Increment a| Number | This is by how much the buffer size expands if it exceeds its initial size. Setting a value of zero or lower means that the buffer should not expand, meaning that a STREAM_MAXIMUM_SIZE_EXCEEDED error is raised when the buffer gets full. Default value is 100 instances. |  |
| Max Buffer Size a| Number | The maximum amount of memory to use. If more than that is used then a STREAM_MAXIMUM_SIZE_EXCEEDED error is raised. A value lower than or equal to zero means no limit. |  |
|===

[[repeatable-file-store-iterable]]
=== Repeatable File Store Iterable

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Max In Memory Size a| Number | The maximum amount of instances to keep in memory. If more than that is required, content on the disk is buffered. |  |
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | The unit in which maxInMemorySize is expressed |  |
|===

[[PlatformApplication]]
=== Platform Application

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Attributes a| Object |  |  |
| Platform Application Arn a| String |  |  |
|===

[[Subscription]]
=== Subscription

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Endpoint a| String |  |  |
| Owner a| String |  |  |
| Protocol a| String |  |  |
| Subscription Arn a| String |  |  |
| Topic Arn a| String |  |  |
|===

[[FifoParameters]]
=== FIFO Parameters

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Message Group Id a| String | Token that specifies where a message belongs. |  | x
| Message Deduplication Id a| String | Token for deduplicating messages. This ID is mandatory when deduplication is not set in the topic level. |  |
|======================


== See Also

* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]
* https://help.mulesoft.com[MuleSoft Help Center]
